--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,16 @@
+/* google font use */
 @font-face {
   font-family: Proxyma;
   src: url("fonts/Fontspring-DEMO-proximanova-light.otf");
 }
+/* google font use */
+
 /* all common css start */
 * {
   margin: 0;
   padding: 0;
   outline: 0;
   box-sizing: border-box;
-  /* font-family: "ProxymaNova"; */
   scroll-behavior: smooth;
 }
 ul,
