--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,7 @@ header {
   color: #ffffff;
   font-weight: 400;
   font-size: 16px;
-  /* font-family: ; */
+  /* font-family: sans-serif; */
   padding: 13px 30px;
   border: none;
   border-radius: 5px;
