--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ header {
 .hero-part__left h2 {
   font-size: var(--section-heading-fz);
   font-weight: 800;
-  /* font-family: "Proxima Nova", sans-serif; */
+  /* font-family: sans-serif; */
   color: var(--primary);
   line-height: 50px;
   margin-bottom: 20px;
@@ -292,7 +292,7 @@ header {
 .elevate-part__right h2 {
   font-size: var(--section-sub-heading-fz);
   font-weight: 800;
-  /* font-family: "Proxima Nova", sans-serif; */
+  /* font-family: sans-serif; */
   color: var(--black);
   margin-bottom: 20px;
 }
